syntax = "proto3";

option go_package = "github.com/openhacku-team-a/a-project-frontend/proto/golang/pb_out";

message UserData {
  string user_id = 1;
  string username = 2;
  string firstname = 3;
  string lastname = 4;
  string firstname_kana = 5;
  string lastname_kana = 6;
  string status_message = 7;
  repeated Tag tag = 8;
  optional string icon_url = 9; // GCS内のファイル名
}

message Tag {
  string tag_id = 1;
  string tag_name = 2;
}

message Milestone {
  string user_id = 1;
  string milestone_id = 2;
  string title = 3;
  string content = 4;
  optional string image_url = 5; // GCS内のファイル名
  string begin_date = 6; //  RFC3339
  string finish_date = 7; // RFC3339
}

message UserInfoUpdateRequest {
  UserData user_data = 1;
}

message UserInfoResponse {
  UserData user_data = 1;
  repeated Milestone milestones = 2;
}

message UserInfosResponse {
  repeated UserInfoResponse user_info_responses = 1;
}

message GetMeResponse {
  UserData user_data = 1;
}

message MilestoneCreateRequest {
  Milestone milestone = 1; // milestone_id should be empty.
}

message MilestoneCreateResponse {
  Milestone milestone = 1;
}

message MilestoneUpdateRequest {
  Milestone milestone = 1; // user_id and milestone_id should be valid.
}
